created api endpoints for cart features
